--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -77,16 +77,16 @@
                                 <div class="image">
                                     <div class="circle-1"></div>
                                     <div class="circle-2"></div>
-                                    <img src="@Hesap.Ins.OturumBilgileri.PhotoURL" width="70" height="70"
-                                         alt="@Hesap.Ins.OturumBilgileri.Username">
+                                    <img src="@Repo.Ins.OturumBilgileri.PhotoURL" width="70" height="70"
+                                         alt="@Repo.Ins.OturumBilgileri.Username">
                                 </div>
 
-                                <div class="name">@Hesap.Ins.OturumBilgileri.Name</div>
+                                <div class="name">@Repo.Ins.OturumBilgileri.Name</div>
                                 <div class="job">
                                     <a id="username"
-                                       href="https://twitter.com/@Hesap.Ins.OturumBilgileri.Username"
+                                       href="https://twitter.com/@Repo.Ins.OturumBilgileri.Username"
                                        target="_blank">
-                                        <i class="bi bi-link-45deg">@Hesap.Ins.OturumBilgileri.Username</i>
+                                        <i class="bi bi-link-45deg">@Repo.Ins.OturumBilgileri.Username</i>
                                     </a>
                                 </div>
                             </div>
@@ -94,44 +94,47 @@
                         <div class="col" style=" display: flex; justify-content: center; align-items: center;">
                             <div class="stats">
                                 <div class="box">
-                                    <span class="value">@Hesap.Ins.OturumBilgileri.Followers</span>
-                                    <span class="parameter">Takipçi Sayısı</span>
+                                
+                                        <span class="value">@Repo.Ins.OturumBilgileri.Followers</span>
+                                        <span class="parameter">Takipçi Sayısı</span>
+                               
+                        
                                 </div>
                                 <div class="box">
-                                    <span class="value">@Hesap.Ins.OturumBilgileri.Following</span>
+                                    <span class="value">@Repo.Ins.OturumBilgileri.Following</span>
                                     <span class="parameter">Takip Edilen</span>
                                 </div>
                                 <div class="box">
-                                    <span class="value">@Hesap.Ins.OturumBilgileri.LastLikesDate</span>
+                                    <span class="value">@Repo.Ins.OturumBilgileri.LastLikesDate</span>
                                     <span class="parameter">Son Beğeni</span>
                                 </div>
 
                                 <div class="box">
-                                    <span class="value">@Hesap.Ins.OturumBilgileri.LastTweetsDate</span>
+                                    <span class="value">@Repo.Ins.OturumBilgileri.LastTweetsDate</span>
                                     <span class="parameter">Son Tweet</span>
                                 </div>
 
                                 <div class="box">
-                                    <span class="value">@Hesap.Ins.OturumBilgileri.BegeniSikligi</span>
+                                    <span class="value">@Repo.Ins.OturumBilgileri.BegeniSikligi</span>
                                     <span class="parameter">Beğeni Sıklığı</span>
                                 </div>
                                 <div class="box">
-                                    <span class="value">@Hesap.Ins.OturumBilgileri.TweetSikligi</span>
+                                    <span class="value">@Repo.Ins.OturumBilgileri.TweetSikligi</span>
                                     <span class="parameter">Tweet Sıklığı<br /></span>
                                 </div>
 
                                 <div class="box">
-                                    <span class="value">@Hesap.Ins.OturumBilgileri.Date</span>
+                                    <span class="value">@Repo.Ins.OturumBilgileri.Date</span>
                                     <span class="parameter">Üyelik Süresi</span>
                                 </div>
 
                                 <div class="box">
-                                    <span class="value">@Hesap.Ins.OturumBilgileri.TweetCount</span>
+                                    <span class="value">@Repo.Ins.OturumBilgileri.TweetCount</span>
                                     <span class="parameter">Tweet Sayısı</span>
                                 </div>
 
                                 <div class="box">
-                                    <span class="value">@Hesap.Ins.OturumBilgileri.LikeCount</span>
+                                    <span class="value">@Repo.Ins.OturumBilgileri.LikeCount</span>
                                     <span class="parameter">Beğeni Sayısı</span>
                                 </div>
                             </div>
@@ -174,19 +177,19 @@
             <i class="bi bi-house-door-fill" style="color: #324060"></i>
         </a>
         <a href="@Url.ActionLink("ListGetir", "Home", new {
-            username = Hesap.Ins.OturumBilgileri.Username,
-            listName = "following"
+                username = Repo.Ins.OturumBilgileri.Username,
+                listName = "following"
             })" class="menu__item" id="takipciler" data-tooltip="Takip Edilenler">
             <i class="bi bi-people-fill" style="color: #324060"></i>
         </a>
         <a href="@Url.ActionLink("ListGetir", "Home",new {
-            username = Hesap.Ins.OturumBilgileri.Username,
-            listName = "followers"
+                username = Repo.Ins.OturumBilgileri.Username,
+                listName = "followers"
             })" class="menu__item" id="listGetir" data-tooltip="Takipçiler">
             <i class="bi bi-person-lines-fill" style="color: #324060"></i>
         </a>
         <a href="@Url.ActionLink("BegenenleriGetir", "Home",new {
-            username = Hesap.Ins.OturumBilgileri.Username
+                username = Repo.Ins.OturumBilgileri.Username
             })" class="menu__item" id="begeniGetir" data-tooltip="Beğenenleri Getir">
             <i class="bi bi-person-lines-fill" style="color: #324060"></i>
         </a>
