--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -61,7 +61,7 @@
 
                 <tr>
 
-                    <td>@item.Count</td>
+                    <td><button asp-action="Yenile" asp-controller="Home" type="button" name="Usernames" value="@item.Username" class="btn userbutons"><i class="bi bi-arrow-repeat"></i></button>@item.Count</td>
                     <td class="phototd">
 
                         <p class="product">
